Removed useless components

--- a/composer.json
+++ b/composer.json
@@ -19,26 +19,18 @@
         "ext-pdo_mysql": "*",
         "ext-redis": "*",
         "ext-swoole": ">=4.5",
-        "hyperf/async-queue": "2.1.*",
-        "hyperf/cache": "2.1.*",
         "hyperf/command": "2.1.*",
         "hyperf/config": "2.1.*",
         "hyperf/constants": "2.1.*",
         "hyperf/contract": "2.1.*",
-        "hyperf/database": "2.1.*",
-        "hyperf/db-connection": "2.1.*",
         "hyperf/di": "2.1.*",
         "hyperf/dispatcher": "2.1.*",
         "hyperf/event": "2.1.*",
         "hyperf/exception-handler": "2.1.*",
         "hyperf/framework": "2.1.*",
-        "hyperf/guzzle": "2.1.*",
         "hyperf/http-server": "2.1.*",
         "hyperf/logger": "2.1.*",
-        "hyperf/model-cache": "2.1.*",
-        "hyperf/pool": "2.1.*",
-        "hyperf/process": "2.1.*",
-        "hyperf/redis": "2.1.*",
+        "hyperf/phar": "2.1.x-dev",
         "hyperf/server": "2.1.*",
         "hyperf/utils": "2.1.*"
     },
