--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           php-version: '7.4'
           tools: phpize
-          ini-values: extension=swoole, opcache.enable_cli=1, swoole.use_shortname='Off'
+          ini-values: extension=swoole, opcache.enable_cli=1, swoole.use_shortname='Off', phar.readonly='On'
           coverage: none
       - name: Setup Swoole
         run: |
