--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         "hyperf/logger": "2.1.*",
         "hyperf/phar": "2.1.*",
         "hyperf/server": "2.1.*",
-        "hyperf/utils": "2.1.*"
+        "hyperf/utils": "2.1.*",
+        "limingxinleo/hyperf-utils": "^3.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.14",
